{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "055f5660-d53e-413a-af3b-d5a9e46a36a8",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "cdc448cb-506f-4f67-badd-4d140e79af92",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "run",
                    "type": "Button",
                    "id": "71ef2925-66fc-4918-a483-bd3d7eab895c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "use",
                    "type": "Button",
                    "id": "18716b0a-fa17-4fb5-9c52-4a50f8eae974",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a975056f-c7e8-4b68-8060-785961d271f3",
                    "path": "2DVector",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ad06327b-24ad-4f1c-9f09-1d50ba9dedac",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "31c859c6-c381-4f65-b45f-d653b6e4edda",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "dbb5a6f2-391f-4988-8c62-e4e909da05d8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "991a325a-f54a-4dfe-9d9b-b383d2c50b62",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3346beaa-a9f1-4b0a-8b6a-cd42888ed09b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9dc1a62-6396-4ed1-aac6-6036a6a9de0e",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}